--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li>Fahri : https://github.com/fahrihaidar/</li>
     <li>Bio Abidzar : https://github.com/biobun/</li>
     <li>Asep : https://github.com/NurRohman24/</li>
-    <li></li>
+    <li>Dika: https://github.com/Dikamayputraa</li>
 	</ol>
 </body>
 </html>
